--- a/mysite/docker-compose.yml
+++ b/mysite/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   django:
-    image: django-docker:0.0.1
+    image: anchengyang/diabetes-django:latest
     build: .
     ports:
       - "8000:8000"
